--- a/templates/pages/partials/nav.html
+++ b/templates/pages/partials/nav.html
@@ -7,7 +7,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="{{ url_for('root') }}">PyNestAdmin</a>
+          <a class="navbar-brand" href="{{ url_for('dashboard') }}">PyNestAdmin</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
